--- a/index.ipynb
+++ b/index.ipynb
@@ -293,12 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': t}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
