--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0:3]['City']], 'y': [cities[0:3]['Area']], 'text': [cities[0:3][]]}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0:3]['City']], 'y': [cities[0:3]['Area']], 'text': [cities[0:3]['City']]}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
    ]
   },
