--- a/index.ipynb
+++ b/index.ipynb
@@ -388,7 +388,7 @@
    "outputs": [],
    "source": [
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0:3]['City']], 'y': [cities[0:3]['Area']], 'text': [cities[0:3]['City']]}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [cities[0:3]['']], 'y': [], 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [cities[0:3]['Population']], 'y': [cities[0:3]], 'text': []}"
    ]
   },
   {
