--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,7 @@
     }
    ],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [city['City'] for city in ], 'y': [cities[0:3]['Area']], 'text': [cities[0:3]['City']]}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [city['City'] for city in [cities[]]], 'y': [cities[0:3]['Area']], 'text': [cities[0:3]['City']]}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [cities[0:3]['City']], 'y': [cities[0:3]['Population']], 'text': [cities[0:3]['City']]}"
    ]
   },
