Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,7 +400,7 @@
    ],
    "source": [
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [city['City'] for city in cities[0:3]], 'y': [city['Area'] for city in cities[0:3]], 'text': [city['City'] for city in cities[0:3]]}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [cities[0:3]['City']], 'y': [cities[0:3]['Population']], 'text': [cities[0:3]['City']]}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [cities[0:3]['City']], 'y': [cities[0:3]['Population']], 'text': [city['City'] for city in cities[0:3]]}"
    ]
   },
   {
